@@ -1,3 +1,8 @@
+2003-02-17  Al Riddoch  <alriddoch@zepler.org>
+
+	* src/Segment.h, src/Segment.cpp: Add a row and column of extra
+	  heightpoints to the segment to make it easier to render.
+
 2003-01-31  Al Riddoch  <alriddoch@zepler.org>
 
 	* Convert to using pkg-config
